# cx

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.in.json  CMakePresets.json  CMakeSettings.json  Doxyfile  Doxyfile.in  LICENSE  LLM-Use.md  README.md  cmake-variants.yaml
cx/: .clang-format  CMakeLists.txt  container.h  cx-gdb.natvis  cx.h  cx.natvis  debug.h  json.h  log.h  math.h  meta.h  obj.h  platform.h  serialize.h  ssdtree.h  static_config.h  taskqueue.h  thread.h  time.h  utils.h
cx/buffer/: CMakeLists.txt  bufchain.c  bufchain.h  buffer.c  buffer.h  bufring.c  bufring.h  stype_buffer.c  stype_buffer.h
cx/closure/: CMakeLists.txt  cchain.c  cchain.h  closure.c  closure.h  closure_private.h  stype_closure.c  stype_closure.h
cx/container/: CMakeLists.txt  foreach.h  hashtable.c  hashtable.h  hashtable_private.h  sarray.c  sarray.h  sarray_private.h  sarray_types.h  stype_hashtable.c  stype_hashtable.h  stype_sarray.c  stype_sarray.h
cx/core/: CMakeLists.txt  alltypes.inc  cpp.h  error.c  error.h  obj_private.h  objclass.c  objclass.h  objiface.c  objiface.h  objimpl.c  objimpl.h  objstdif.auto.inc  objstdif.c  objstdif.h  objstdif.sidl  stvar.c  stvar.h  stype.c  stype.h  stype_obj.c  stype_obj.h  stype_stvar.c  stype_suid.c  stype_suid.h  suid.c  suid.h
cx/debug/: CMakeLists.txt  assert.c  assert.h  blackbox.c  blackbox.h  crash.c  crash.h  crash_private.h  crashmem.c  dbglog.c  dbglog.h  dbgtypes.c  dbgtypes.h  error.c  error.h  stacktrace.h
cx/digest/: CMakeLists.txt  digest.c  digest.h  digest_private.h  md5.c  sha1.c  sha256.c
cx/format/: CMakeLists.txt  fmtfloat.c  fmtformat.c  fmtint.c  fmtobject.c  fmtparse.c  fmtptr.c  fmtstring.c  fmtsuid.c  format.c  format.h  format_private.h  formattable.auto.inc  formattable.c  formattable.h  formattable.sidl  fppowers.h
cx/fs/: CMakeLists.txt  file.h  fs.h  fs_private.h  path.c  path.h  pathmatch.c  vfs.c  vfs.h  vfs_private.h  vfsdirsearch.c  vfsfileops.c  vfsobj.auto.inc  vfsobj.c  vfsobj.cxh  vfsobj.h  vfsobj.sidl  vfsops.c  vfsprovider.auto.inc  vfsprovider.c  vfsprovider.h  vfsprovider.sidl  vfsstruct.c
cx/log/: CMakeLists.txt  log.c  log.h  log_private.h  logbuffer.c  logdefer.c  logdefer.h  logdest.c  logfile.c  logfile.h  logmembuf.c  logmembuf.h  logqueue.c  logthread.c
cx/math/: CMakeLists.txt  lcg.h  pcg.c  pcg.h
cx/meta/: CMakeLists.txt  block.h  meta.c  pblock.h  ptry.h
cx/platform/: CMakeLists.txt  base.h  cpp.h  cpu.h  ksema.h  os.h  simd.h  uievent.h  unix.h  wasm.h  win.h
cx/serialize/: .streambuf.c.swp  CMakeLists.txt  jsoncommon.h  jsonnode.auto.inc  jsonnode.c  jsonnode.h  jsonnode.sidl  jsonout.c  jsonout.h  jsonouttree.c  jsonparse.c  jsonparse.h  jsonparsetree.c  lineparse.c  lineparse.h  sbfile.c  sbfile.h  sbfsfile.c  sbfsfile.h  sbstring.c  sbstring.h  streambuf.c  streambuf.h
cx/settings/: CMakeLists.txt  settings.c  settings.h  settings_private.h  settings_thread.c  settings_write.c  settingshashnode.auto.inc  settingshashnode.c  settingshashnode.cxh  settingshashnode.h  settingshashnode.sidl  settingstree.auto.inc  settingstree.c  settingstree.cxh  settingstree.h  settingstree.sidl
cx/ssdtree/: CMakeLists.txt  ssdinfo.auto.inc  ssdinfo.c  ssdinfo.h  ssdinfo.sidl  ssdnode.auto.inc  ssdnode.c  ssdnode.h  ssdnode.sidl  ssdnodes.h  ssdshared.h  ssdtree.c  ssdtree.h  ssdtreeobj.auto.inc  ssdtreeobj.c  ssdtreeobj.cxh  ssdtreeobj.h  ssdtreeobj.sidl
cx/string/: CMakeLists.txt  strbase.c  strbase.h  strbase64.c  strcase.c  strcompare.c  strcompare.h  strconcat.c  strempty.c  strencoding.c  strencoding.h  strfind.c  strfind.h  string_private.h  string_private_utf8.h  striter.c  striter.h  strjoin.c  strliteral.h  strmanip.h  strnum.h  strnum_fp.c  strnum_fppowers.h  strnum_int.c  strrope.c  strsplit.c  strsubstr.c  strtest.h  stype_string.c  stype_string.h
cx/struct/: CMakeLists.txt  struct.c  struct.h  stype_struct.c  stype_struct.h
cx/stype/: CMakeLists.txt  alltypes.inc  stconvert.c  stconvert.h  stregistry.c  stvar.c  stvar.h  stype.c  stype.h  stype_cxx.hpp  stype_stvar.c  stype_stvar.h
cx/suid/: CMakeLists.txt  stype_suid.c  stype_suid.h  suid.c  suid.h
cx/sys/: CMakeLists.txt  entry.c  entry.h  hostid.c  hostid.h  hostid_private.h
cx/taskqueue/: CMakeLists.txt  basictask.auto.inc  basictask.c  basictask.h  basictask.sidl  manager.c  monitor.c  mtask.auto.inc  mtask.c  mtask.h  mtask.sidl  task.auto.inc  task.c  task.h  task.sidl  taskqueue.c  taskqueue.h  taskqueue_private.h  taskqueue_shared.h  tqobject.auto.inc  tqobject.c  tqobject.h  tqobject.sidl  userfunctask.auto.inc  userfunctask.c  userfunctask.cxh  userfunctask.h  userfunctask.sidl  worker.auto.inc  worker.c  worker.h  worker.sidl
cx/thread/: CMakeLists.txt  aspin.h  atomic.c  atomic.h  condvar.c  condvar.h  event.c  event.h  futex.h  mutex.c  mutex.h  prqueue.c  prqueue.h  rwlock.c  rwlock.h  sema.c  sema.h  systhread.c  thread.c  thread.h  thread_private.h  threadbase.h  (+10 more)
cxautogen/: CMakeLists.txt  classes.c  cxautogen.c  cxautogen.h  header.c  impl.c  interfaces.c  objtypes.auto.inc  objtypes.c  objtypes.cxh  objtypes.h  parser.c  structs.c
cxmem/: .editorconfig  CMakeLists.txt  README.md  config.h  config.h.in  cxmem.h
cxobjgen/: .clang-format  CMakeLists.txt  buffile.c  buffile.h  classes.c  cxobjgen.c  cxobjgen.h  header.c  impl.c  interfaces.c  objtypes.auto.inc  objtypes.c  objtypes.h  objtypes.sidl  parser.c  stub.c
misc/: .clang-format  CMakeLists.txt  htbench.c  luacmd.c  presetsmaker.c
tests/: CMakeLists.txt  alltests.c  buftest.c  closuretest.c  common.h  converttest.c  converttestobj.auto.inc  converttestobj.c  converttestobj.cxh  converttestobj.h  cpptest.cpp  cxmemtest.c  debugtest.c  digesttest.c  fmttest.c  fmttestobj.auto.inc  fmttestobj.c  fmttestobj.cxh  fmttestobj.h  fmttestobj.sidl  fstest.c  httest.c  jsontest.c  lineparsetest.c  logtest.c  mathtest.c  metatest.c  objtest.c  objtestobj.auto.inc  objtestobj.c  objtestobj.cxh  objtestobj.h  objtestobj.sidl  prqtest.c  sarraytest.c  sbtest.c  serialtest.c  ssdtest.c  strtest.c  stvartest.c  (+7 more)
(+364 files in other folders)
